--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 
     <script src="client/main.js"></script>
+    <script src="client/socket.io.js"></script>
 </head>
 <body>
     <div id="container">
