--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         <div id="toolbox">
             <div class="vertically-centered">
                 <input type="text" class="input-text-medium">
-                <span>238 matches.</span>
+                <span id="matches">238 matches.</span>
+                <div class="lock-div">
+                    <span>Lock to end</span>
+                    <input id="lock-checkbox" type="checkbox" checked>
+                </div>
             </div>
         </div>
     </div>
