Work on pushing info on launch.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
     <div id="container">
         <div id="configuration-div">
             <p>
-                <span>Accepting connections on <span class="emphasized">192.212.32.91:9999</span></span>
+                <span id="field-status">Initializing...</span>&nbsp;<span id="field-ip" class="emphasized"></span>
             </p>
         </div>
         <div id="tabs">
             <table>
                 <tr>
                     <td><span class="tab-close">&#10006;</span><span class="tab-title">BJordan</span></td>
-                    <td><span class="tab-close">&#10006;</span><span class="tab-title">(02) BJordan</span></td>
                 </tr>
             </table>
         </div>
