Cleaning up UI, adding icons, readme.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Log-O-Matic 5000</title>
+    <title>Natural Log</title>
 
     <!-- Electron compatibility. -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
